# tuna

./: .gitignore  Cargo.toml  LICENCE.md  README.md
crates/animechan/: Cargo.toml
crates/animechan/src/: lib.rs
crates/die/: Cargo.toml
crates/die/src/: lib.rs
crates/waifu_im/: Cargo.toml
crates/waifu_im/src/: lib.rs
crates/waifu_pics/: Cargo.toml
crates/waifu_pics/src/: lib.rs
crates/xkcd/: Cargo.toml
crates/xkcd/src/: lib.rs
src/: bot.rs  lib.rs
src/commands/: dice.rs  mod.rs  waifu.rs  xkcd.rs
src/commands/anime/: mod.rs  quote.rs  waifu.rs
