[package]
name = "tuna"
version = "0.1.1"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.9", features = ["bot-serenity"] }
shuttle-secrets = "0.9"
serenity = { version = "0.11", default-features = false, features = [
	"client",
	"gateway",
	"rustls_backend",
	"model",
] }
tracing = "0.1"

rand = "0.8"

animechan = { version = "0.1", path = "crates/animechan" }
die = { version = "0.1", path = "crates/die" }
waifu_im = { version = "0.1", path = "crates/waifu_im" }
waifu_pics = { version = "0.1", path = "crates/waifu_pics" }
xkcd = { version = "0.1", path = "crates/xkcd" }
